Task funiona de nuevo.